# CPPStudy

./: .gitignore  .gitignore.orig  CTP的dll设计分析.md  README.md  effective C++ 50规则.txt  effective_Cpp_50rules.md  effective_Cpp_rules.md  hello.html  index.html  mmap.c  sin.c  socketClient.c  socketServer.c  threadSync1.cpp  threadTest.cpp  threadTest2.cpp  threadTest4.cpp  threadTest7.cpp  windows10下编译libevent（x64和x86））
CMakeProject1/: CMakeLists.txt  CMakeSettings.json
CMakeProject1/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  v.cpp  v.h
CMakeProject1/myLibOne/: CMakeLists.txt  log.h  myLibOne.cpp  myLibOne.h
CMakeProject1/myLibTwo/: CMakeLists.txt  myLibTwo.cpp  myLibTwo.h
Linux/: a.out  asyncFutureStudy  asyncFutureStudy.cpp  daemonMailCheck.c  dic.c  est.tar  fork1.c  functionTest.cpp  futureStudy  futureStudy.cpp  inputDetect.c  makefile  packageTaskStudy  packageTaskStudy.cpp  pipe.c  socketServerAndClient.c  structTest.cpp  testMutexPerformance  testMutexPerformance.cpp  threadTest6.cpp  tmp  tmp.cpp  vectorTest  vectorTest.cpp  zip_unzip.c
Linux/01factorial/: bug  bug.c  factorial  factorial.c  hello  hello.C  main.c  makefile
Linux/01reciprocal/: main.c  makefile  reciprocal  reciprocal.cpp  reciprocal.hpp
Linux/03arlib/: CMakeLists.txt  hello_binary  makefile  makefile_g++  usehello.c  usehello_static
Linux/04solib/: CMakeLists.txt  Start.sh  hello_binary  libhello.c  libhello.h  makefile  usehello.c  usehello_so
Linux/05extern/: file.c  test  test.c
Linux/06mem/: malloc_example  malloc_example.c  memcpy  memcpy.c  memmove  memmove.c
Linux/07iobuf/: no_buf1.txt  no_buf4.txt  setbuf  setbuf.c  stdio_buffer  stdio_buffer.c
Linux/08ansiC/: aa.txt  block_example  block_example.c  char_example  char_example.c  fopen_example  fopen_example.c  string_example  string_example.c  try.txt
Linux/09format/: .printf.c.swp  makefile  printf  printf.c  scanf  scanf.c  sscanf  sscanf.c
Linux/10fork/: fork_example02  fork_example02.c
Linux/11exec/: execl  execl.c
Linux/12thread/: threadTest3.cpp
Linux/13socket/: socketServerAndClient.c  sortCompare.c
Linux/15time/: timeval.c
Linux/17linuxFun/: a.out  env.out  exp.out  getenv_exp.c  getlimit_exp.c  getopt_exp.c  limit.out  mem_exp.cxx  sprintf.out  sprintf_exp.cxx  time.out  time_exp.cxx
Linux/18xinetd_example/: daytime_inetd  daytime_inetd.c  readme.txt
Linux/19console/: consoleColor  consoleColor.c
Linux/49none/: system.c
Linux/50algorithm/: hanoi  hanoi.cpp  mazeMouse1  mazeMouse2  mazeMouse2.cpp
Linux/51App/: autoConfigIP.c  dic.c  dirFileNum.c  inputDetect.c  myaccess.c  mysleep.c  mystat.c  signalTest.c
Linux/51muduoBaseStudy/: Atomic.h  BlockingQueue.h  CMakeCache.txt  CMakeLists.txt  Condition.cpp  Condition.h  CountDownLatch.cpp  CountDownLatch.h  CurrentThread.cpp  CurrentThread.h  Date.cc  Date.h  Date_test  Exception.cpp  Exception.h  FileUtil.cpp  FileUtil.h  LogFile.h  LogStream.cc  LogStream.h  Logging.cpp  Logging.h  Makefile  Mutex.h  ProcessInfo.cpp  ProcessInfo.h  StringPiece.h  Thread.cpp  ThreadLocal.h  ThreadPool.cpp  ThreadPool.h  Timestamp.cpp  Timestamp.h  Types.h  build.sh  cmake_install.cmake  compile_commands.json  install_manifest.txt  noncopyable.h
Linux/51muduoBaseStudy/test/: CMakeCache.txt  CMakeLists.txt  Date_test.cc  Makefile  cmake_install.cmake  date_unittest  exception_test  exception_test.cpp  fileutil_test  logstream_unittest
Linux/52cppLight2d/: a.out  svpngTest.cpp
Linux/53makefileExample/: makefile  test.cpp  test.out
Linux/class01/: class_01  class_01.cpp  interface  interface.cpp
SocketSequence/: SocketSequence.sln
SocketSequence/SocketSequence/: BaseStruct.h  Client.cpp  Server.cpp  SocketSequence.cpp  SocketSequence.vcxproj  Utils.cpp  Utils.h
SocketSequence/UdpTest/: UdpTest.cpp  UdpTest.sln  UdpTest.vcxproj  client.h  self_pipe.h  server.h
TemplateMeta/: TemplateMeta.cpp  TemplateMeta.sln  TemplateMeta.vcxproj
TemplateMeta/TemplateMeta/: TemplateMeta.cpp  TemplateMeta.vcxproj
VS2017DLLClassExport/: StudyBase.sln
VS2017DLLClassExport/GUGWAPI/: GUGWAPI.cpp  GUGWAPI.vcxproj  a.h  stdafx.cpp
VS2017DLLClassExport/OTHERAPI/: ExportClassImpl.cpp  ExportClassImpl.h  OTHERAPI.cpp  OTHERAPI.vcxproj  b.h  dllmain.cpp  stdafx.cpp
VS2017DLLClassExport/StudyBase/: InterfaceDefineAndRealize.cpp  InterfaceDefineAndRealize.h  StudyBase.cpp  StudyBase.vcxproj  ThreadsMessageDefine.h  stdafx.cpp
VS2017DLLClassExport/ThreadsMessengerApi/: ThreadsMessageDefine.cpp  ThreadsMessageDefine.h  ThreadsMessageImpl.cpp  ThreadsMessageImpl.h  ThreadsMessengerApi.cpp  ThreadsMessengerApi.vcxproj  stdafx.cpp
VS2017DLLSolution/: Dll1.sln
VS2017DLLSolution/ConsoleApplication1/: CMath.h  CMathChild.cpp  CMathChild.h  ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  Dll1.lib  Dll_feituoguan.lib  algo.h  first.h
VS2017DLLSolution/Dll1/: Dll1.cpp  Dll1.vcxproj  first.h
VS2017DLLSolution/Dll_feituoguan/: CMath.cpp  CMath.h  CMathImpl.cpp  CMathImpl.h  Dll_feituoguan.cpp  Dll_feituoguan.def  Dll_feituoguan.vcxproj  algo.h  stdafx.cpp
VS2017DLLSolution/useDllToDll/: stdafx.cpp  useDllToDll.cpp  useDllToDll.vcxproj
VS2017DesignAPI/DesignAPI/: DesignAPI.cpp  DesignAPI.sln  DesignAPI.vcxproj  Stack.cpp  autoTimer.cpp  autoTimer.h  observer.cpp  observer.h  stack.h  stack_priv.h  stdafx.cpp
VS2017DesignPattern/: DesignPattern.sln
VS2017DesignPattern/DesignPattern/: AbstractFactory.cpp  AbstractFactory.h  Adapter.h  Aspect.h  Bridge.h  Builder.h  ChainofResponsibility.h  Composite.h  Decpratpr.h  DesignPattern.vcxproj  DesignPatternTest.cpp  Facade.h  MethodFactory.cpp  MethodFactory.h  Observer.h  Proxy.h  SimpleFactory.cpp  SimpleFactory.h  (+9 more)
VS2017Mysql8/: VS2017Mysql8.cpp  VS2017Mysql8.vcxproj
VS2017Project/: Practice.sln
VS2017STL/: STLTest.cpp  STLTest.sln  STLTest.vcxproj  Type.cpp  stdafx.cpp  structType.h
详细笔记/: VS2017制作动态链接库-导出类的方法之一.txt  VS2017制作动态链接库-导出类的方法之二.txt
(+119 files in other folders)
